<resources>
    <string name="app_name">Video Background</string>
    <string name="neck_information">Neck information</string>
    <string name="previous">Previous</string>
    <string name="exercise_to_reduce_neck_pain">Exercise to reduce neck pain</string>
    <string name="exercise_to_reduce_shoulder_pain">Exercise to reduce shoulder pain</string>
    <string name="exercise_to_reduce_elbow_pain">Exercise to reduce elbow pain</string>
    <string name="exercise_to_reduce_thigh_pain">Exercise to reduce thigh pain</string>
    <string name="stat">STAT</string>
    <string name="ai_counter">AI-COUNTER</string>
    <string name="bmi">BMI</string>

    <string name="lower_back_information">Lower back information</string>
    <string name="rotatebtn">ROTATE</string>
    <string name="upper_back_information" />
    <string name="todo">TODO</string>
    <string name="rotate" />
    <string name="tfe_pn_app_name">Fitness Camera</string>
    <string name="tfe_pn_request_permission">This app needs camera permission.</string>
    <string name="tfe_pn_camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
